// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtensionToggle extension disabled in settings 1`] = `
<DocumentFragment>
  <div
    class="toggle"
  >
    <button
      aria-checked="false"
      data-testid="extension-toggle-x/y"
      role="switch"
      title="Click to enable"
      type="button"
      value="0"
    >
      <span
        class="bar"
      >
        <span
          class="knob"
        />
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ExtensionToggle extension enabled in settings 1`] = `
<DocumentFragment>
  <div
    class="toggle"
  >
    <button
      aria-checked="true"
      data-testid="extension-toggle-x/y"
      role="switch"
      title="Click to disable"
      type="button"
      value="1"
    >
      <span
        class="bar barOn"
      >
        <span
          class="knob knobOn"
        />
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ExtensionToggle extension not present in settings 1`] = `
<DocumentFragment>
  <div
    class="toggle"
  >
    <button
      aria-checked="false"
      data-testid="extension-toggle-x/y"
      role="switch"
      title="Click to enable"
      type="button"
      value="0"
    >
      <span
        class="bar"
      >
        <span
          class="knob"
        />
      </span>
    </button>
  </div>
</DocumentFragment>
`;
